--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -23,3 +23,9 @@
 .btnLoadMore:focus {
     background-color: #303f9f;
 }
+
+.buttonLoadWrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
